# ChangeLog for app-misc/cl-decoration-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-decoration-meta-11.0-r5 (07 Feb 2011)

  07 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r4.ebuild, +cl-decoration-meta-11.0-r5.ebuild:
  for CLD add x11-themes/oxygen-molecule

*cl-decoration-meta-11.0-r4 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r3.ebuild, +cl-decoration-meta-11.0-r4.ebuild:
  Moved fonts to cl-xorg-meta

*cl-decoration-meta-11.0-r3 (29 Nov 2010)

  29 Nov 2010; Трацевский Александр <alex@gentoo.org>
  -cl-decoration-meta-11.0-r2.ebuild, +cl-decoration-meta-11.0-r3.ebuild:
  Moved compiz to cldg-meta 

*cl-decoration-meta-11.0-r2 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r1.ebuild, +cl-decoration-meta-11.0-r2.ebuild:
  Renamed USE flag to CDISTRO.

*cl-decoration-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-decoration-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
