@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.0-r6.ebuild 1086 RMD160 93e718c3b6094d37d955441744988253a63cf891 SHA1 18a9684301913d51e6d8a9c2d102dc6929eae8e0 SHA256 9b3cee1ed6decfa18806aec34aafcde141c264292518727cba6a090d4811b515
-MISC ChangeLog 1180 RMD160 9e4147beae35abc1626b1f579ef5bba8d4ed8eb0 SHA1 d619827a335053e8eedffee988a4229796ff2a57 SHA256 e1d6349964c832e92454c368b510fc99c98181dcb02ceec4d8ac18a7829fb486
+EBUILD cl-decoration-meta-11.0-r7.ebuild 1038 RMD160 f395300ef08f68433fdc3cc917c3ebe01ea5b6a1 SHA1 eaa41ae7725d04263a44e993d56d5e85a0e003fb SHA256 cff146ed62248df8a378b925f89b04ca89466f43d00cfab08ba7b28972fe1a56
+MISC ChangeLog 1430 RMD160 3ea204b4636ce21063451fce19141bd7ffd883be SHA1 8d931872e650b73277e96c3bdb51cc39ccf32082 SHA256 9c4b68e1335faa9aec3f13f992555e1188eee9e1b4a5afb11109ba7721f35280
