@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-decoration-meta-11.0-r7 (09 Mar 2011)
+
+  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-decoration-meta-11.0-r6.ebuild, +cl-decoration-meta-11.0-r7.ebuild:
+  Add #x11-themes/xfce4-icon-theme for CLD. Needed for chromium :(
+
 *cl-decoration-meta-11.0-r5 (07 Feb 2011)
 
   07 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
